fixed extra padding in forms

--- a/static/blocks/profile-popup/profile-popup.scss
+++ b/static/blocks/profile-popup/profile-popup.scss
@@ -24,8 +24,10 @@
   }
 
   &__profile-icon {
-    height: 140px;
     width: 140px;
+    height: 140px;
+    margin: 0 auto;
+
     border-radius: 100%;
   }
 
