--- a/static/modules/scss/_popup.scss
+++ b/static/modules/scss/_popup.scss
@@ -22,7 +22,6 @@ $popup-left-padding: 15px;
   &__content {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     margin: 0;
     padding: $popup-top-padding $popup-right-padding $popup-bottom-padding $popup-left-padding;
